# pydacharts

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py  techstack.md  techstack.yml  tox.ini
.github/workflows/: main.yml
examples/: __init__.py  bar.py  datalabels.py  line.py  options.py  other.py  pie.py
pydacharts/: chart_utils.py  chartjs_types.py  charts.py  color.py  elements.py  models.py  test_chart_utils.py  test_elements.py
pydacharts/plugins/: datalabels.py  sankey.py
requirements/: base.txt  jupyter.in  jupyter.txt
serve/: app.py  serve_data.py
serve/static/: sankey.js
serve/templates/: chart.html  chart_datalabels.html
serve/templates/static/: dashboard.css
src/pydacharts/: chart_utils.py  chartjs_types.py  elements.py  models.py
src/pydacharts/plugins/: datalabels.py  doughnutlabel.py  sankey.py
tests/: test_bar.py  test_chart_examples.py  test_chart_utils.py  test_datalabels.py  test_elements.py  test_line.py  test_models.py  test_options.py  test_other.py  test_pie.py
