
[tool.isort]
profile = "black"
skip_gitignore = "True"
line_length = 119

[tool.black]
line-length = 119
target-version = ['py38']

[tool.poetry]
name = "pydacharts"
version = "0.2.0"
description = ""
authors = ["Josh Brooks <josh@catalpa.io>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.8"

[tool.poetry.group.dev.dependencies]
isort = "*"
black = "*"
mypy = "*"
flake8 = "*"
pytest = "*"
pytest-cov = "*"
Flask = "*"
pre-commit = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
