[project]
name = "pydacharts"
version = "0.2.0"
description = "ChartJS Python integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
]
authors = [{name = "Josh Brooks", email = "josh@catalpa.io"}, {name = "Roberto Maurizzi", email = "roberto@catalpa.io"}]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
serve = [
    "fastapi[standard]>=0.115.0",
    "jinja2>=3.1.4",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]


[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pydacharts"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]
